--- a/Venetian.BusinessLayer/Venetian.BusinessLayer.csproj
+++ b/Venetian.BusinessLayer/Venetian.BusinessLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,7 @@
     <Compile Include="HashUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAUtility.cs" />
+    <Compile Include="SteganographyUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Venetian.DataLayer\Venetian.DataLayer.csproj">
